# zsign

./: .gitignore  .gitmodules  CMakeLists.txt  CTestTestfile.cmake  INSTALL.sh  README.md  bundle.cpp  bundle.h  openssl.h  signing.cpp  signing.h  zsign.cpp  zsign2-linux  zsign2-mac
.github/workflows/: Linux.yml  cmake-single-platform.yml  macOS.yml
Test/: Encrypted.p12  Unencrypted.p12  test.ipa
common/: common.cpp  common.h
src/: archo.cpp  base64.cpp  common.cpp  json.cpp  openssl.cpp
src/Headers/: archo.h  base64.h  bundle.h  common.h  json.h  openssl.h  signing.h  zsign.h
src/Headers/Certs/: appleDevCA_Cert.h  appleDevCA_Cert_G3.h  appleRoot_CA_Cert.h
src/zsign/: archo.cpp  base64.cpp  bundle.cpp  common.cpp  json.cpp  macho.cpp  openssl.cpp  signing.cpp  zsign.cpp
test/: test.mobileprovision  test.p12
